FlushIt/FlushIt/app/src/main/java/com/example/flushit/errors/NetworkError.kt
package com.example.flushit.errors

class NetworkError : CustomError() {
    override var message = "Ett n채tverksfel har uppst책tt. Prova att sl책 p책 internet om du inte redan har det."

    override fun displayError() = message
}